Přidání infa o 3D Tisku

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Radim Křek</h1>
                 <hr>
-                <p>HTML5, PHP, Nette, Less</p>
+                <p>HTML5, PHP, Nette</p>
+				<hr>
+				<p>3D Tisk</p>
                 <a href="#contact" class="btn btn-primary btn-xl page-scroll">Více</a>
             </div>
         </div>
